--- a/lecutre_14/3_assignment.css
+++ b/lecutre_14/3_assignment.css
@@ -87,6 +87,13 @@ th {
 	border-radius: 3px;
 }
 
+tr:hover {
+	background-color: rgba(127, 145, 247, 0.6);
+}
 th {
 	background-color: rgba(239, 157, 218, 0.5);
+}
+
+thead th {
+	pointer-events: none;
 }
