--- a/lecutre_14/3_assignment.css
+++ b/lecutre_14/3_assignment.css
@@ -83,7 +83,7 @@ td:nth-child(1) {
 td,
 tr,
 th {
-	border: 0.5px solid rgb(79, 47, 67, 0.5);
+	border-bottom: 0.5px solid rgb(79, 47, 67, 0.5);
 	border-radius: 3px;
 }
 
