add edit function assaignment3 incomplete

--- a/lecture_19_Cata_Riveros/lecture_19/src/App.css
+++ b/lecture_19_Cata_Riveros/lecture_19/src/App.css
@@ -16,7 +16,7 @@
 
 form{  
     display: grid;
-    grid-template-columns: 1fr 2fr 1px;
+    grid-template-columns: 1fr 3fr 0.5fr 0.5fr;
     padding: 5px 15px;
     margin: 5px;
     justify-content: space-between;
